# 3D-Software-Renderer-CURRENT

./: .gitignore  CMakeLists.txt  LICENSE  README.md
res/Models/sponza/: sponza.mtl
src/: array.h  ctagss.h  image.c  image.h  main.c  object.c  object.h  raster.c  raster.h  render.c  render.h  scene.c  scene.h  text.c  text.h  vector.c  vector.h  viewport.c  viewport.h
